--- a/后台/link_list.html
+++ b/后台/link_list.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,6 +109,13 @@
 				</ul>
 			</div>
 			<div class="div2">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>友情链接管理</li>
+						<li><a href="link_list.html">友情链接列表</a></li>
+					</ul>
+				</div>
 				<div class="hd">友情链接列表</div>
 				<a href="link_add.html"><button class="button button_add">&nbsp;添加友情链接&nbsp;</button></a>
 				<button class="button button_add">&nbsp;批量删除&nbsp;</button>
@@ -120,81 +128,81 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
 							<td>ID</td>
-							<td>标题</td>
+							<td width="18%">标题</td>
 							<td>链接URL</td>
-							<td>操作</td>
+							<td style="width:20%;">操作</td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>1</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>2</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>3</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>4</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>5</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>6</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>7</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>8</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>9</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>10</td>
 							<td>百度</td>
 							<td>http://www.baidu.com</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="link_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 					</table>
 				</div>
