--- a/后台/post.html
+++ b/后台/post.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,6 +109,13 @@
 				</ul>
 			</div>
 			<div class="div2_3">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>发帖管理</li>
+						<li><a href="post.html">贴子列表</a></li>
+					</ul>
+				</div>
 				<div class="hd">贴子列表</div>
 				<button class="button button_add">&nbsp;批量删除&nbsp;</button>
 			
@@ -119,19 +127,19 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
 							<td>ID</td>
-							<td>标题</td>
+							<td style="width:18%;">标题</td>
 							<td>内容</td>
-							<td style="width:30%;">图片</td>
-							<td>操作</td>
+							<td style="width:20%;">图片</td>
+							<td style="width:10%;">操作</td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>1</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -139,7 +147,7 @@
 							<td>2</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -147,7 +155,7 @@
 							<td>3</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -155,7 +163,7 @@
 							<td>4</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -163,7 +171,7 @@
 							<td>5</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -171,7 +179,7 @@
 							<td>6</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -179,7 +187,7 @@
 							<td>7</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -187,7 +195,7 @@
 							<td>8</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -195,7 +203,7 @@
 							<td>9</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -203,7 +211,7 @@
 							<td>10</td>
 							<td>苹果</td>
 							<td>苹果是蔷薇科(Rosaceae)苹果属(malus)植物的果实，该属约25种</td>
-							<td><img src="images/3.jpg" width="40%;"></td>
+							<td><img src="images/3.jpg" width="70%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 					</table>
