--- a/后台/recipe_category_list.html
+++ b/后台/recipe_category_list.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,6 +109,13 @@
 				</ul>
 			</div>
 			<div class="div2">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>菜谱管理</li>
+						<li><a href="recipe_category_list.html">菜谱分类列表</a></li>
+					</ul>
+				</div>
 				<div class="hd">菜谱分类列表</div>
 				<a href="recipe_category_add.html"><button class="button button_add">&nbsp;添加菜谱分类&nbsp;</button></a>
 				<button class="button button_add">&nbsp;批量删除&nbsp;</button>
@@ -120,70 +128,70 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
-							<td>ID</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
+							<td style="width:10%;">ID</td>
 							<td>菜谱分类</td>
-							<td>操作</td>
+							<td style="width:30%;">操作</td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>1</td>
 							<td>家常菜谱</td>
-							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>2</td>
 							<td>中华料理</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>3</td>
 							<td>外国料理</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>4</td>
 							<td>各地小吃</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>5</td>
 							<td>烘焙</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>6</td>
 							<td>甜点</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>7</td>
 							<td>西式料理</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>8</td>
 							<td>面食类</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>9</td>
 							<td>各地菜系</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" name="check_all"></td>
 							<td>10</td>
 							<td>汤</td>
-							<td><a href="#"><i class="am-icon-trash"></i>删除</a></td>
+							<td><a href="recipe_category_change.html"><i class="am-icon-pencil"></i>修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 					</table>
 				</div>
