--- a/后台/restaurant_recipe_list.html
+++ b/后台/restaurant_recipe_list.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/admin_add.css"/>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/amazeui.min.js"></script>
+		<script src="js/check.js"></script>
 	</head>
 	<body>
 		<div class="am-topbar topbar topbar_zipad">
@@ -108,6 +109,13 @@
 				</ul>
 			</div>
 			<div class="div2_2">
+				<div>
+					<ul class="am-breadcrumb am-breadcrumb-slash">
+						<li><a href="log_index.html">首页</a></li>
+						<li>店家分享管理</li>
+						<li><a href="restaurant_recipe_list.html">店家菜谱列表</a></li>
+					</ul>
+				</div>
 				<div class="hd">店家菜谱列表</div>
 				<button class="button button_add">&nbsp;批量删除&nbsp;</button>
 			
@@ -119,12 +127,12 @@
 				<div class="bd_list">
 					<table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered">
 						<tr class="tablefonta">
-							<td style="width:8%;"><input type="checkbox" name="check_all">&nbsp;全选</td>
+							<td style="width:9%;"><input type="checkbox" id="selAll">&nbsp;全选</td>
 							<td>ID</td>
 							<td>菜谱名称</td>
 							<td>来自店家</td>
 							<td>菜谱分类</td>
-							<td>成品照片</td>
+							<td style="width:20%;">成品照片</td>
 							<td>操作</td>
 						</tr>
 						<tr>
@@ -133,7 +141,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -142,7 +150,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -151,7 +159,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -160,7 +168,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -169,7 +177,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -178,7 +186,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr><tr>
 							<td><input type="checkbox" name="check_all"></td>
@@ -186,7 +194,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -195,7 +203,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -204,7 +212,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 						<tr>
@@ -213,7 +221,7 @@
 							<td>宫保鸡丁</td>
 							<td>重庆鸡公煲</td>
 							<td>中华料理</td>
-							<td><img src="images/2.jpg" style="width:30%;"></td>
+							<td><img src="images/2.jpg" style="width:80%;"></td>
 							<td><a href=""><i class="am-icon-trash"></i>删除</a></td>
 						</tr>
 					</table>
